--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ header {
 	height: 90px;
 	margin-bottom: 50px;
 	background-color: #ffffff;
-	border-bottom: solid 5px #4aaaa5;
+	border-bottom: solid 10px #4aaaa5;
 }
 
 h1 {
@@ -48,7 +48,7 @@ section {
 footer {
 	clear: both;
 	background-color: #666666;
-	border-top: solid 5px #4aaaa5;
+	border-top: solid 10px #4aaaa5;
 	height: 50px;
 	width: 960px;
 	margin: auto;
@@ -60,6 +60,8 @@ footer {
 	float: right;
 	text-align: center;
 	text-decoration: none;
+	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+	color: #4aaaa5;
 	border-radius: 15%;
 	width: 50px;
 	padding: 25px;
@@ -110,7 +112,10 @@ footer {
 	float: left;
 	max-height: 200px;
 	max-width: 200px;
-	padding: 10px;
+	margin: 10px;
+	margin-right: 30px;
+	border: solid 3px #5e5e5e;
+	border-radius: 15%;
 }
 
 #legal {
