--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
+html {
+    overflow-y: scroll;
+}
+
 header {
 	height: 90px;
+	width: 960px;
 	margin-bottom: 50px;
 	background-color: #ffffff;
-	border-bottom: solid 10px #4aaaa5;
+	border-bottom: solid 10px #005a8e;
 }
 
 h1 {
@@ -10,7 +15,7 @@ h1 {
 	margin-left: 10%;
 	padding: 20px;
 	font-family: "Georgia", Times, Times New Roman, sans-serif;
-	background-color: #4aaaa5;
+	background-color: #005a8e;
 	color: #ffffff;
 	font-size: 50px;
 }
@@ -48,7 +53,7 @@ section {
 footer {
 	clear: both;
 	background-color: #666666;
-	border-top: solid 10px #4aaaa5;
+	border-top: solid 10px #005a8e;
 	height: 50px;
 	width: 960px;
 	margin: auto;
@@ -66,17 +71,17 @@ footer {
 	text-decoration: none;
 	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 	color: #4aaaa5;
-	transition: all 0.5s;
+/*	transition: all 0.5s;*/
 }
 
 .navbar:hover { 
-	background-color: #4aaaa5;
+	background-color: #005a8e;
 	opacity: 0.6;
 	color: #ffffff;
 }
 
 .navbar:active {
-	background-color: #4aaaa5;
+	background-color: #005a8e;
 	opacity: 0.9;
 	color: #ffffff;
 }
@@ -85,7 +90,8 @@ footer {
 	float: right;
 	height: 10px;
 	width: 10px;
-	border: solid 5px #4aaaa5;
+	opacity: 0.6;
+	border: solid 5px #005a8e;
 	border-radius: 50%;
 	margin-top: 35px;
 }
@@ -130,7 +136,8 @@ footer {
 .gallery img {
 	height: 150px;
 	width: 225px;
-	border: solid 2px black;
+	border: solid 2px #000000;
+	border-radius: 3px;
 }
 
 .gallery div {
@@ -142,11 +149,20 @@ footer {
 
 .portDesc {
 	opacity: .5;
-	background: black;
+	background: #000000;
 	padding: 15px 0;
 	text-align: center;
-	color: white;
+	color: #ffffff;
 	text-decoration: none;
+}
+
+.contactMe {
+	clear: both;
+	padding-top: 25px;
+/*	padding-bottom: 50px;*/
+	margin-left: 10px;
+	color: #5e5e5e;
+	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 }
 
 #profilePic {
@@ -168,6 +184,31 @@ footer {
 
 #spacer {
 	height: 150px;
+}
+
+#subject {
+	width: 100%;
+	height: 100px;
+}
+
+input[type=text], select, text area {
+	width: 95%;
+	padding: 12px;
+	border: 1px solid #000000;
+	border-radius: 4px;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+input[type=submit] {
+	background-color: #005a8e;
+	color: white;
+	padding: 12px 20px;
+	margin-top: 10px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
 #legal {
